# trace

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  DEVELOPMENT_STATUS.md  INSTALL_AND_TEST.md  LICENSE  README.md  contributing.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/trace/: analysis.html  data.html  model.html  simulate.html
_sources/: index.md.txt
_sources/api/: analysis.md.txt  simulate.md.txt
_sources/model/: 00_overview.md.txt  01_background.md.txt
_sources/tutorials/: 01_basic_example.ipynb.txt  02_gaza_analysis.md.txt
api/: analysis.html  data.html  model.html  simulate.html
docs/: Makefile  conf.py  contributing.md  index.md  installation.md  references.bib
docs/api/: data.md  model.md
docs/model/: 00_overview.md  01_background.md  02_description.md  03_implementation.md
docs/tutorials/: 01_basic_example.ipynb  01_basic_example.md.backup  02_gaza_analysis.ipynb  02_gaza_analysis.md
examples/: 01_basic_usage.py  02_real_data_example.py  README.md
model/: 00_overview.html  01_background.html  02_description.html  03_implementation.html
presentation/: custom.scss  references.bib  trace_presentation.html  trace_talk.html  trace_talk.qmd
src/trace/: __init__.py  analysis.py  data.py  model.py  simulate.py
tests/: __init__.py  conftest.py  test_analysis.py  test_data.py  test_init.py  test_model.py  test_simulate.py
tutorials/: 01_basic_example.html  01_basic_example.ipynb  02_gaza_analysis.html  02_gaza_analysis.ipynb
