[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trace-conflict"
version = "0.1.0"
description = "A Bayesian hierarchical model for conflict casualty analysis using JAX and NumPyro"
authors = [
    { name = "Imperial College London", email = "trace@imperial.ac.uk" }
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["bayesian", "conflict", "casualties", "numpyro", "jax", "spatial-statistics"]

dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpyro>=0.13.0",
    "requests>=2.31.0",
    "matplotlib>=3.7.0",
    "arviz>=0.16.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
    "nbsphinx>=0.9.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "sphinxcontrib-bibtex>=2.6.0",
]

[project.urls]
Homepage = "https://github.com/imperial-college/trace"
Documentation = "https://imperial-college.github.io/trace"
Repository = "https://github.com/imperial-college/trace"
"Bug Tracker" = "https://github.com/imperial-college/trace/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/trace"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803"]

[tool.ruff.lint.isort]
known-first-party = ["trace"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=trace --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
